...
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Username: "
            android:textSize="14sp" />

        <EditText
            android:id="@+id/signup_username_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:hint="Enter username here" />
    </LinearLayout>

...
            android:id="@+id/signup_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email:" />

        <EditText
            android:id="@+id/signup_email_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="Enter email here"
            android:inputType="textEmailAddress" />
    </LinearLayout>
...
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Password: "
            android:textSize="14sp" />

        <EditText
            android:id="@+id/signup_password_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:hint="Enter password here"
            android:inputType="textPassword" />
    </LinearLayout>
...
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Confirm password: "
            android:textSize="14sp" />

        <EditText
            android:id="@+id/signup_confirm_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:hint="Enter password here"
            android:inputType="textPassword" />
    </LinearLayout>
...
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/signup_sq_text"
        app:layout_constraintTop_toBottomOf="@+id/signup_sq_text"
        app:layout_constraintWidth_percent="0.8">

        <Spinner
            android:id="@+id/signup_sq1_spinner"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/signup_sq1_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Enter answer 1"
            android:inputType="text" />
    </LinearLayout>
...
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/signup_sq1_linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/signup_sq1_linearLayout"
        app:layout_constraintWidth_percent="0.8">

        <Spinner
            android:id="@+id/signup_sq2_spinner"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/signup_sq2_edit"
...
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"></Button>

    <Button
        android:id="@+id/signup_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Signup"
        android:textColor="#ffffff"
        android:textSize="18sp"
...
