<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/profile_username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Guest (not logged in)"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />


        <Button
            android:id="@+id/profile_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="Login"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/profile_username_text"
            app:layout_constraintStart_toStartOf="@+id/profile_username_text"
            app:layout_constraintTop_toBottomOf="@+id/profile_username_text" />

        <Button
            android:id="@+id/profile_signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Signup"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/profile_login_button"
            app:layout_constraintStart_toStartOf="@+id/profile_login_button"
            app:layout_constraintTop_toBottomOf="@+id/profile_login_button" />

        <Button
            android:id="@+id/profile_edit_user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Edit user"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/profile_tier_button"
            app:layout_constraintStart_toStartOf="@+id/profile_tier_button"
            app:layout_constraintTop_toBottomOf="@+id/profile_tier_button" />

        <Button
            android:id="@+id/profile_delete_user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Delete user"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/profile_logout_button"
            app:layout_constraintStart_toStartOf="@+id/profile_logout_button"
            app:layout_constraintTop_toBottomOf="@+id/profile_logout_button" />

        <Button
            android:id="@+id/profile_logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Logout"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/profile_edit_user_button"
            app:layout_constraintStart_toStartOf="@+id/profile_edit_user_button"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit_user_button" />

        <Button
            android:id="@+id/profile_following_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Following"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/profile_delete_user_button"
            app:layout_constraintStart_toStartOf="@+id/profile_delete_user_button"
            app:layout_constraintTop_toBottomOf="@+id/profile_delete_user_button" />

        <Button
            android:id="@+id/profile_followers_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Followers"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/profile_following_button"
            app:layout_constraintStart_toStartOf="@+id/profile_following_button"
            app:layout_constraintTop_toBottomOf="@+id/profile_following_button" />

        <ImageButton
            android:id="@+id/profile_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:src="@drawable/cog_outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/profile_tier_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="User Tier"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/profile_username_text"
            app:layout_constraintStart_toStartOf="@+id/profile_username_text"
            app:layout_constraintTop_toBottomOf="@+id/profile_login_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>