...
                app:layout_constraintHorizontal_bias="0.512"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.188" />

            <EditText
                android:id="@+id/security_input_password"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginStart="61dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="56dp"
                android:layout_marginBottom="176dp"
...
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.553"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/security_3_question_spinner"
                app:layout_constraintVertical_bias="0.0" />

            <Spinner
                android:id="@+id/security_3_question_spinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Cancel" />

                <Button
                    android:id="@+id/change_submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:text="Submit" />
            </LinearLayout>

...
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="New\nPassword: "
                    android:textSize="18dp"></TextView>

                <EditText
                    android:id="@+id/change_password_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:hint="Enter Password Here"
                    android:inputType="textPassword"></EditText>

            </LinearLayout>
...
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Confirm\npassword: "
                    android:textSize="18dp"></TextView>

                <EditText
                    android:id="@+id/change_password_confirm_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:hint="Enter Password Here"
                    android:inputType="textPassword"></EditText>


...
